--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,25 @@
       </button>
       <span>{{ title }}</span>
       <span class="spacer"></span>
+      
+      <!-- User Menu -->
+      <div class="user-menu" *ngIf="authService.isAuthenticated()">
+        <button mat-icon-button [matMenuTriggerFor]="userMenu">
+          <mat-icon>account_circle</mat-icon>
+        </button>
+        <mat-menu #userMenu="matMenu">
+          <div class="user-info">
+            <mat-icon>person</mat-icon>
+            <span>{{ authService.currentUser()?.email }}</span>
+          </div>
+          <mat-divider></mat-divider>
+          <button mat-menu-item (click)="signOut()">
+            <mat-icon>logout</mat-icon>
+            <span>Sign Out</span>
+          </button>
+        </mat-menu>
+      </div>
+      
       <button
         type="button"
         mat-icon-button
