Tidying grocery list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,17 @@
         <mat-icon matListItemIcon>dashboard</mat-icon>
         <span matListItemTitle>Dashboard</span>
       </a>
-      <a mat-list-item routerLink="/food" routerLinkActive="active-link">
+      <a mat-list-item routerLink="/grocery-list" routerLinkActive="active-link">
+        <mat-icon matListItemIcon>shopping_cart</mat-icon>
+        <span matListItemTitle>Grocery List</span>
+      </a>
+      <a mat-list-item routerLink="/recipes" routerLinkActive="active-link">
+        <mat-icon matListItemIcon>restaurant</mat-icon>
+        <span matListItemTitle>Recipes</span>
+      </a>
+      <a mat-list-item routerLink="/restaurants" routerLinkActive="active-link">
         <mat-icon matListItemIcon>restaurant_menu</mat-icon>
-        <span matListItemTitle>Food Hub</span>
+        <span matListItemTitle>Restaurants</span>
       </a>
       <a mat-list-item routerLink="/calendar" routerLinkActive="active-link">
         <mat-icon matListItemIcon>event</mat-icon>
