--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,16 +52,8 @@
         <div class="counter-item">
           <mat-icon class="counter-icon github">code</mat-icon>
           <div class="counter-info">
-            <span class="counter-name">GitHub AI</span>
+            <span class="counter-name">GitHub Models</span>
             <span class="counter-value">{{ githubApiCalls() }}</span>
-          </div>
-        </div>
-        
-        <div class="counter-item">
-          <mat-icon class="counter-icon gemini">psychology</mat-icon>
-          <div class="counter-info">
-            <span class="counter-name">Google Gemini</span>
-            <span class="counter-value">{{ geminiApiCalls() }}</span>
           </div>
         </div>
       </div>
