--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -283,11 +283,7 @@
         height: 20px;
         
         &.github {
-          color: #2196F3;
-        }
-        
-        &.gemini {
-          color: #9C27B0;
+          color: #24292f;
         }
       }
       
