--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
       <mat-card-title>
         <mat-icon>family_restroom</mat-icon>
-        Family Command Center
+        Whoa Geier Sign In
       </mat-card-title>
       <mat-card-subtitle>
         {{ isSignUp() ? 'Create your account' : 'Sign in to your account' }}
